--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
     <meta name="author" content="Mihailov Doina">
     <meta name="keywords" content="Mihailov Doina, Mihailov Doina, Software Engineer, Computer Science Student">
 
-    <title>Doina Mihailov/title>
+    <title>Doina Mihailov</title>
 
     <!-- Font Awesome CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
               <h1 class="cover-heading">Doina Mihailov</h1>
               <h2>Computer Science Student<h2>
               <div>
-                <a class="btn btn-default" href="mailto:doinami99[at]gmail[dot]com"><i class="fa fa-envelope fa-2x"></i></a>
+                <a class="btn btn-default" href="mailto:doinami99@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
                 <a class="btn btn-default" href="skype:doinami99"><i class="fa fa-skype fa-2x"></i></a>
                 <a target="_blank" class="btn btn-default" href="https://www.linkedin.com/in/doina-mihailov-7b5aba195/"><i class="fa fa-linkedin fa-2x"></i></a>
                 <a target="_blank" class="btn btn-default" href="https://www.facebook.com/doinami"><i class="fa fa-facebook fa-2x"></i></a>
