--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,7 +48,7 @@
 
           <div class="inner cover">
             <div id="picture_col">
-              <img src="images/profil.jpg" alt="Doina Mihailov profile picture" class="img-rounded">
+              <img id="profil" src="images/profil.jpg"  alt="Doina Mihailov profile picture" class="img-rounded">
             </div>
             <div id="text_col">
               <h1 class="cover-heading">Doina Mihailov</h1>
