--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
 
           <div class="inner cover">
             <div id="picture_col">
-              <img id="profil" src="images/profil.jpg"  alt="Doina Mihailov profile picture" class="img-rounded">
+              <img id="profil" src="images/profil12.jpg"  alt="Doina Mihailov profile picture" class="img-rounded">
             </div>
             <div id="text_col">
               <h1 class="cover-heading">Doina Mihailov</h1>
